fix the reply conversation by add an align-self:start

--- a/src/Exchange.css
+++ b/src/Exchange.css
@@ -8,6 +8,7 @@ html {
     overflow: hidden;
     margin:1%;
     max-width: 80vw;
+    align-self: start;
     margin-top: 1%;
 }
 .Exchange__container{
@@ -42,10 +43,10 @@ margin-left: 2%;
 /*-------------------------------------------------------------------------*/
 
 .Exchange__wrapper.self{
-    position:absolute;
+  
     text-align: right;
     position: relative;
-    justify-items: flex-end;
+  
     align-self:end;
 }
 .Exchange__wrapper.self > .Exchange__container{
@@ -71,6 +72,6 @@ margin-left: 2%;
 .scroll{
    display: flex;
    flex-direction: column-reverse;
-   justify-content: center;
+   
 }
 
